# thread-based-traffic-simulator

./: CMakeLists.txt  README.md
source/: definitions.h  enums.h  main.cpp  square.h
source/display/: car.h  carManager.h  menu.h
source/lib/: olcPixelGameEngine.h
source/traffic/: firstComeFirstServed.h  firstInFirstOut.h  statistics.h  street.h  threadSchedulingContext.h  threadSchedulingStrategy.h  timeBasedPreemption.h  timeBasedPreemption_alsoTried.h  timeBasedPreemption_suggested.h  trafficDirector.h  trafficManagementContext.h  trafficManagementStrategy.h  trafficSimulator.h
